[metadata]
author = Pasha Podolsky
classifiers =
    Topic :: Utilities
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
name = aiocrossref
python_requires = '>=3.8',
version = 0.2.0
url = https://github.com/izihawa/aiocrossref

[options]
packages = find:
install_requires =
    aiobaseclient >= 0.1.0
    fire >= 0.3.1
    izihawa-types >= 0.1.0

[options.entry_points]
console_scripts =
    crossref-cli = aiocrossref.cli:main

[flake8]
max-line-length = 120
doctests = True
exclude = .git, .eggs, __pycache__, tests/, docs/, build/, dist/